# forms

./: .dockerignore  .drone.yml  .env  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .renovaterc.json5  Dockerfile  Dockerfile-proxy  Dockerfile-quality  Dockerfile-web  Dockerfile-worker  Dockerfile.quality  MANIFEST.in  Makefile  Pipfile  Pipfile.lock.license  README.md  REUSE.toml  docker-compose-quality.yml  docker-compose.dev.yml  docker-compose.yml  index.html  playbook.yml  pyproject.toml  renovate.json  requirements.txt  requirements_all.txt  setup.py
.reuse/: dep5
LICENSES/: GPL-3.0-or-later.txt
compose/: docker-compose.yml
conf/: nginx.conf  proxy.conf
doc/: configure.md  hack.md  install.md
docs/: configure.md  dev.md  install.md
forms-fake-fsfe-cd-front/: Dockerfile  Dockerfile-fake-fsfe-cd-front
forms-fake-fsfe-cd-front/config/subscribe-api/: POST_200.json
fsfe_forms/: __init__.py  app.py  applications.json  applications.json.license  cd.py  config.py  debug_server.py  email.py  json_store.py  model.py  queue.py  views.py  wsgi.py
fsfe_forms/background/: tasks.py
fsfe_forms/common/: config.py  configurator.py  models.py
fsfe_forms/common/services/: DeliveryService.py  SenderService.py  SenderStorageService.py  StorageService.py  TemplateRenderService.py  TemplateService.py  __init__.py
fsfe_forms/common/templates/: confirmation.en.html  confirmation_duplicate.en.html
fsfe_forms/configuration/: applications.json  templates.json
fsfe_forms/templates/: confirm.html  contact-register.eml  group-projects-confirm.eml  group-projects-register.eml  index.html  ln-apply-confirm.eml  ln-apply-register.eml  ln-member-confirm.eml  ln-member-register.eml  pmpc-sign-confirm.eml  pmpc-sign-duplicate.eml  pmpc-sign-register.eml  reuse-api-confirm.eml  reuse-api-register.eml  reuse-booster-confirm.eml  reuse-booster-register.eml  upa-sign-duplicate.eml  upa-sign-register.eml  yh4f-confirm.eml  yh4f-register.eml
fsfe_forms/web/: controller.py
src/: debug_server.py  worker.py  wsgi.py
src/background/: app.py  celeryconfig.py  tasks.py
src/common/: config.py  configurator.py  exceptions.py  models.py  tests.py
src/configuration/: applications.json  templates.json
src/web/: controller.py
test/: __init__.py  conftest.py  test_confirm.py  test_email.py  test_index.py
tests/: __init__.py  conftest.py  test_confirm.py  test_email.py  test_index.py
(+23 files in other folders)
