# SPDX-FileCopyrightText: 2025 Free Software Foundation Europe e.V.
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "fsfe-forms"
description = "FSFE Form Server"
authors = [ {name = "Free Software Foundation Europe", email = "techsupport@fsfe.org"} ]
license = "GPL-3.0-or-later"
version = "1.0.0-dev"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = [
    "fsfe_forms",
    "fsfe_forms.static.css",
    "fsfe_forms.static.img",
    "fsfe_forms.templates",
    "fsfe_forms.templates.pages"
]

[tool.ruff.lint]
#  See https://docs.astral.sh/ruff/rules/ for information
select = [
  # "ANN",   # Flake 8 type annotations
  # "A",     # prevent using keywords that clobber python builtins
  # "ARG",   # Unused arguments
  "ASYNC", # Flake 8 aysnc
  "B",     # bugbear: security warnings
  "C4",    # Comprehensions
  "E",     # pycodestyle
  "ERA",   # Commented out code
  "F",     # pyflakes
  "FURB",  # More upgrades to newer styles
  "G",     # Logging Formatting
  "I",     # ordered import
  # "ISC",   # implicit string concatenation
  "LOG",   # Logging stuff
  "N",     # pep 8 naming
  # "PERF",  # SOme performance stuff
  "PIE",   # Some extra checks
  # "PL",    # Pylint
  # "PTH",   # Use pathlib
  "PT",    # Pytest style
  "Q",     # flake 8 quotes
  # "RET",   # Return types
  "RSE",   # Unneeded exception parentheses
  # "RUF",   # the ruff developer's own rules
  # "SIM",   # Simplify
  "T20",   # Warn about prints
  "TC",    # Type checking
  # "TRY",   # Error handling stuff
  "UP",    # Update syntax to newer versions
  "W",     # pycodestyle warnings
]
[tool.ruff.lint.isort]
lines-after-imports = 2